Add build context and Dockerfile to clawdbot-gateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 services:
   clawdbot-gateway:
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: ${CLAWDBOT_IMAGE:-clawdbot:local}
     environment:
       HOME: /home/node
