--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,19 +30,19 @@ services:
         "${CLAWDBOT_GATEWAY_PORT:-18789}"
       ]
 
-  #clawdbot-cli:
-  #  image: ${CLAWDBOT_IMAGE:-clawdbot:local}
-  #  environment:
-  #    HOME: /home/node
-  #    TERM: xterm-256color
-  #    BROWSER: echo
-  #    CLAUDE_AI_SESSION_KEY: ${CLAUDE_AI_SESSION_KEY}
-  #    CLAUDE_WEB_SESSION_KEY: ${CLAUDE_WEB_SESSION_KEY}
-  #    CLAUDE_WEB_COOKIE: ${CLAUDE_WEB_COOKIE}
-  #  volumes:
-  #    - ${CLAWDBOT_CONFIG_DIR}:/home/node/.clawdbot
-  #    - ${CLAWDBOT_WORKSPACE_DIR}:/home/node/clawd
-  #  stdin_open: true
-  #  tty: true
-  #  init: true
-  #  entrypoint: ["node", "dist/index.js"]
+  clawdbot-cli:
+    image: ${CLAWDBOT_IMAGE:-clawdbot:local}
+    environment:
+      HOME: /home/node
+      TERM: xterm-256color
+      BROWSER: echo
+      CLAUDE_AI_SESSION_KEY: ${CLAUDE_AI_SESSION_KEY}
+      CLAUDE_WEB_SESSION_KEY: ${CLAUDE_WEB_SESSION_KEY}
+      CLAUDE_WEB_COOKIE: ${CLAUDE_WEB_COOKIE}
+    volumes:
+      - ${CLAWDBOT_CONFIG_DIR}:/home/node/.clawdbot
+      - ${CLAWDBOT_WORKSPACE_DIR}:/home/node/clawd
+    stdin_open: true
+    tty: true
+    init: true
+    entrypoint: ["node", "dist/index.js"]
