Docker: preload Whisper on first start

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,15 @@ services:
       CLAUDE_AI_SESSION_KEY: ${CLAUDE_AI_SESSION_KEY}
       CLAUDE_WEB_SESSION_KEY: ${CLAUDE_WEB_SESSION_KEY}
       CLAUDE_WEB_COOKIE: ${CLAUDE_WEB_COOKIE}
+      CLAWDBOT_USE_OPENCODE: ${CLAWDBOT_USE_OPENCODE:-false}
+      CLAWDBOT_WHISPER_PRELOAD: ${CLAWDBOT_WHISPER_PRELOAD:-true}
+      CLAWDBOT_WHISPER_MODEL: ${CLAWDBOT_WHISPER_MODEL:-base}
+      XDG_CACHE_HOME: /opt/whisper-cache
     volumes:
       - ${CLAWDBOT_CONFIG_DIR}:/home/node/.clawdbot
       - ${CLAWDBOT_WORKSPACE_DIR}:/home/node/clawd
       - ${CLAWDBOT_USER_CONFIG_DIR}:/home/node/.config
+      - clawdbot-whisper-cache:/opt/whisper-cache
     ports:
       - "${CLAWDBOT_GATEWAY_PORT:-18789}:18789"
       - "${CLAWDBOT_BRIDGE_PORT:-18790}:18790"
@@ -49,3 +54,6 @@ services:
   #  tty: true
   #   init: true
   #  entrypoint: ["node", "dist/index.js"]
+
+volumes:
+  clawdbot-whisper-cache:
