docker: default whisper language fr

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       CLAWDBOT_USE_OPENCODE: ${CLAWDBOT_USE_OPENCODE:-false}
       CLAWDBOT_WHISPER_PRELOAD: ${CLAWDBOT_WHISPER_PRELOAD:-true}
       CLAWDBOT_WHISPER_MODEL: ${CLAWDBOT_WHISPER_MODEL:-base}
+      CLAWDBOT_WHISPER_LANGUAGE: ${CLAWDBOT_WHISPER_LANGUAGE:-fr}
       XDG_CACHE_HOME: /opt/whisper-cache
     volumes:
       - ${CLAWDBOT_CONFIG_DIR}:/home/node/.clawdbot
