--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - ${CLAWDBOT_CONFIG_DIR}:/home/node/.clawdbot
       - ${CLAWDBOT_WORKSPACE_DIR}:/home/node/clawd
       - ${CLAWDBOT_USER_CONFIG_DIR}:/home/node/.config
-      - clawdbot-whisper-cache:/opt/whisper-cache
+      - ${CLAWDBOT_WHISPER_CACHE_VOLUME:-clawdbot-whisper-cache}:/opt/whisper-cache
     ports:
       - "${CLAWDBOT_GATEWAY_PORT:-18789}:18789"
       - "${CLAWDBOT_BRIDGE_PORT:-18790}:18790"
@@ -55,7 +55,3 @@ services:
   #  tty: true
   #   init: true
   #  entrypoint: ["node", "dist/index.js"]
-
-volumes:
-  clawdbot-whisper-cache:
-    name: ${CLAWDBOT_WHISPER_CACHE_VOLUME:-clawdbot-whisper-cache}
